Refactoring code # 3
Text shenanigans.
Random bug fixes i've noticed.
{skip_ping}